# AutoData

./: .gitignore  LICENSE  README.md  gen-lang-client-0893906587-8d19672882f4.json  pyproject.toml
Data/: README.md
Data/prompts/: __init__.py  data_format.py  ground_truth_parser.py  paper_collection.py  prompt_handler.py  sport_collection.py  stock_collection.py
autodata/: main.py  test.py
autodata/agents/: __init__.py  base.py  dev.py  manager.py  res.py
autodata/core/: auto.py  config.py  types.py
autodata/prompts/: __init__.py  blueprint.md  browser.md  engineer.md  manager.md  planner.md  prompt_loader.py  test.md  tool.md  valid.md  web.md
autodata/tools/: crawler.py  csv_utils.py  keywords.py  legal.py  pdf.py  search.py  social_search.py  web.py
autodata/utils/: __init__.py  cli.py  logging.py
docs/dev/: README.md
examples/: README.md  demo.md
src/autodata/: __init__.py  __version__.py  config.py  exceptions.py  main.py
src/autodata/agents/: base.py
src/autodata/core/: config.py
src/autodata/prompts/: __init__.py  blueprint.md  browser.md  manager.md  valid.md
src/autodata/utils/: __init__.py  logging.py
tests/: test_logging.py  test_manager_agent.py
thamluan/: __init__.py  main.py  requirements.txt  setup.sh  test.py
thamluan/agents/: __init__.py  base.py  dev.py  manager.py  res.py
thamluan/core/: auto.py  config.py  types.py
thamluan/data/articles/: articles_20251013_123043.json  articles_20251013_124828.json  articles_20251013_124949.json
thamluan/data/csv/: Luật_Khoa_học,_công_nghệ_và_đổi_mới_sáng_tạo_2025_articles_20251013_204713.csv  Luật_Khoa_học,_công_nghệ_và_đổi_mới_sáng_tạo_2025_articles_20251013_211618.csv  test_comments.csv
thamluan/prompts/: __init__.py  manager_system.md  prompt_loader.py
thamluan/tools/: __init__.py  article_scraper.py  comment_scraper.py  csv_exporter.py  direct_news_search.py  legal_pdf_finder.py  pdf_extractor.py  pdf_handler.py  search_engine.py  sentiment_analyzer.py  text_analyzer.py  vector_db.py  web_crawler.py
thamluan/utils/: __init__.py  cli.py  logging.py
